# agent-bench

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01d448a977e7_initial.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  worker.py
backend/app/agents/: debate_agent.py  pipeline_agent.py  react_agent.py  registry.py  supervisor_agent.py
backend/app/routers/: agents.py  experiments.py  leaderboard.py  runs.py  tasks.py  ws.py
backend/app/services/: elo.py  runner.py  scoring.py
backend/app/tasks_lib/: seed.py
backend/app/tools/: registry.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: NavBar.tsx  ui.tsx
frontend/src/hooks/: useRunStream.ts
frontend/src/pages/: AgentDetail.tsx  AgentsPage.tsx  Experiment.tsx  ExperimentsPage.tsx  Leaderboard.tsx  NewExperiment.tsx  RunMonitor.tsx  TaskLibrary.tsx
